# PICJR2019

./: .gitignore  LICENSE  README.md
doc/: Base Sensor.stl  Base.stl  Camera-suporte.stl  Camera.stl  Encoder.stl  IMU-suporte.stl  IMU.stl  Motor-suporte.stl  Motor.stl  Ponte-H-suporte.stl  Ponte-H.stl  Roda.stl  Sonar-suporte-central.stl  Sonar-suporte-lateral.stl  Sonar.stl  Suporte CAM.stl  base.stl
doc/Partes/: Base New - Half v3.stl  Pilha pat3 v1.stl  Pilha_part1 v2.stl  Pilha_part2 v1.stl  Pilha_part4 v3.stl  Roda Boba part 2 v1.stl  Roda Boba part1 Lego v7.stl  Suporte Camera Base v1.stl  Suporte Camera Tampa v1.stl  Suporte FTDI Base v4.stl  Suporte FTDI Tampa v4.stl  Suporte MPU Base v10.stl  Suporte MPU Tampa v3.stl  Suporte Motor v6.stl  Suporte Ponte H v2.stl  Suporte Ultrassom - 45 v7.stl  Suporte Ultrassom - 90 v10.stl
src/: CMakeLists.txt  package.xml
src/controllers/arabot/: Makefile  arabot.cpp  ros_arabot.cpp  ros_arabot.hpp
src/controllers/arabot_cpp/: arabot_cpp.cpp
src/controllers/arabot_ros/: Makefile  arabot_ros.cpp  arabot_ros.hpp  main.cpp
src/include/arabot/: set_float.h
src/launch/: arabot_webots.launch  arabot_webots_lab.launch  collision_avoidance.launch  webots_blockly.launch  webots_cpp.launch
src/ros/: Envia.ipynb  Recebe.ipynb  collision_avoidance.cpp
src/worlds/: arabot_lab.wbt  arabot_stl2.wbt
